tests/typecheck/should_fail/T12045b.hs
{-# LANGUAGE TypeApplications #-}

module T12045b where

import Data.Kind

x :: Int @Type
x = 5
